# lerobot_builder

./: README.md  main.py  pyproject.toml
aloha_raw/: convert_aloha_data_to_lerobot.py
libero_raw/: convert_libero_data_to_lerobot.py
rdt_raw/: convert_rdt_group_data_to_lerobot.py
